--- a/style.css
+++ b/style.css
@@ -1,26 +1,58 @@
-
+body {
+  font-family: 'Open Sans', sans-serif;
+  background-color: #f9f9fa
+}
 
 header {
   padding: 20px;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  border:1px solid red;
+  background-color: #524649;
+  height: 90px;
 }
 
 .header h1 {
-  margin: 0;
+  color: #b2a1b1;
+  font-weight: 800;
+  font-size: 3rem;
+  letter-spacing: 1.5px;
+  margin-left: 30px;
+}
+
+span {
+  color: #fff;
 }
 
 .search-nav {
-  border:1px solid red;
   display: flex;
   justify-content: flex-end;
   align-items: center;
 }
 
 .search-box {
-  border:1px solid red;
+  border: 2px solid #d2cccd;
+  padding: 5px;
+  height: 36px;
+  border-radius: 5px 0px 0px 5px;
+}
 
+.search-btn-container {
+  background-color: #d2cccd;
+  height: 36px;
+  width: 36px;
+  margin-right: 30px;
+  border-radius: 0px 5px 5px 0px;
+  cursor: pointer;
+}
+
+.search-btn-container:hover {
+  background-color: #6e646b;
+}
+
+.fa-search {
+  color: #fff;
+  padding: 7px;
+  /*width: 20px;*/
 }
 
 img {
@@ -32,6 +64,60 @@ img {
   display: flex;
   justify-content: center;
   align-items: center;
+  background-color: #eaeaea;
+  padding: 15px;
+  margin-bottom: 20px;
+}
+
+.idea-form {
+  display: flex;
+  flex-direction: column;
+  width: 50%;
+}
+
+h4 {
+  color: #7c7879;
+  margin: 30px 0px 5px 0px;
+  font-weight: 300;
+  font-size: 1.3rem;
+  display: flex;
+  flex-direction: column;
+}
+
+.title-box,
+.body-box {
+  display: flex;
+  flex-direction: column;
+  border-radius: 5px;
+  border: 2px solid #d2cccd;
+  margin-top: 5px;
+}
+
+.body-box {
+  height: 70px;
+}
+
+.title-box {
+  height: 35px;
+  border-radius: 5px;
+  border: 2px solid #d2cccd;
+  margin-top: 5px;
+}
+
+.save-button {
+  color: #fff;
+  font-weight: 800;
+  font-size: 1.3rem;
+  background-color: #c2c1c0;
+  border-radius: 5px;
+  margin-top: 15px;
+  margin-bottom: 15px;
+  height: 35px;
+  cursor: pointer;
+}
+
+.save-button:hover {
+  background-color: #524649;
 }
 
 .idea-card {
