--- a/style.css
+++ b/style.css
@@ -1,18 +1,21 @@
 body {
   font-family: 'Open Sans', sans-serif;
-  background-color: #f9f9fa
+  background-color: #fbfdfd;
 }
 
+
 header {
-  padding: 20px;
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  background-color: #524649;
-  height: 90px;
+  background-color: #322a30;
+  display: flex;
+  justify-content: space-between;
+}
+
+textarea {
+  resize: none;
 }
 
 .header h1 {
-  color: #b2a1b1;
+  color: #afa5cd;
   font-weight: 800;
   font-size: 3rem;
   letter-spacing: 1.5px;
@@ -33,11 +36,13 @@ span {
   border: 2px solid #d2cccd;
   padding: 5px;
   height: 36px;
+  width: 250px;
   border-radius: 5px 0px 0px 5px;
+
 }
 
 .search-btn-container {
-  background-color: #d2cccd;
+  background-color: #5e5c6b;
   height: 36px;
   width: 36px;
   margin-right: 30px;
@@ -64,7 +69,7 @@ img {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #eaeaea;
+  background-color: #edf2f2;
   padding: 15px;
   margin-bottom: 20px;
 }
@@ -91,6 +96,8 @@ h4 {
   border-radius: 5px;
   border: 2px solid #d2cccd;
   margin-top: 5px;
+  max-width: 100%;
+  min-width: 100%;
 }
 
 .body-box {
@@ -108,7 +115,7 @@ h4 {
   color: #fff;
   font-weight: 800;
   font-size: 1.3rem;
-  background-color: #c2c1c0;
+  background-color: #5e5c6b;
   border-radius: 5px;
   margin-top: 15px;
   margin-bottom: 15px;
@@ -117,7 +124,7 @@ h4 {
 }
 
 .save-button:hover {
-  background-color: #524649;
+  background-color: #52505d;
 }
 
 .idea-card {
@@ -139,5 +146,34 @@ h4 {
 }
 
 .delete-button {
+}
+
+@media only screen and (max-width: 800px) {
+  
+  header {
+    justify-content: center;
+    flex-direction: column;
+  }
+  .search-nav {
+    justify-content: center;
+    margin: 10px 0 20px 0;
+  }
+  .header h1 {
+    margin: 10px auto;
+    font-size: 2rem;
+  }
+
+  .search-btn-container {
+    margin-right: 0;
+  }
+
+  .search-box {
+    width: 230px;
+  }
+
+  .idea-form {
+    width: 90%;
+  }
+
 
 }
