--- a/style.css
+++ b/style.css
@@ -172,7 +172,10 @@ h4 {
 }
 
 .delete-button {
+  width: 20px;
+  height: 20px;
   margin-right: 10px;
+  background-image: url(Images/delete.svg);
 }
 
 @media only screen and (max-width: 800px) {
