--- a/style.css
+++ b/style.css
@@ -122,6 +122,10 @@ h4 {
   background-color: #52505d;
 }
 
+.save-button:disabled {
+  background-color: #C2C1C0;
+}
+
 .cards-container {
   display: flex;
   justify-content: center;
